		* Fixed an uncountable number of potential segfaults on
		amuleweb because almost no return value of GetTagByIndex and
		GetTagByName were beeing checked for NULL.
		* Fixed the following bug in the search dialog window: if you
		type a letter by mistake or if you use the down arrow from 1
		to 0, both actions on a wxSpinCtrl, aMule would crash.

	Ken:
		* Fixed Mac bug: window was a little larger each restart
		* Fixed aMule.tmpl so Safari can work with amuleweb
		* On Mac, enabled Command-clicking in lists to toggle selection
		* Solved the DECLARE_ABSTRACT_CLASS() mystery on wx-2.4.2. Now
		we can have UDP socks5 with wx-2.4.2.
		* Included CVSDATE with version in amulesig.dat
		* Fixed an endianness bug with webserver
		* Fixed last (I hope!) endianness bug with IPFilter
		* Fixed a major endianness bug with widespread effects.  On Mac,
		  servers don't fail continuously until eventually removed from the
		  list; server pings work.  Global search seems to work better.
		  DNS lookup of servers and ED2K link sources should now work.

	volpol
		* Patch to fix use of deprecated functions in wxGTK-2.5.3.

	Special Thanks To:
		* Bug and feature reporters:
		rommel

--------------------------------------------------------------------------------

Version 2.0.0rc8 - The "last rc" version.
----------
2004-12-21

	Baz:
		* Fix for server stats for users/files not being updated correctly.
		* Fix for ERROR and WARNING server messages not being shown.
		* Fixed server / transfers window splitters not being loaded/saved correctly.
		* Fixed categories on search dialog not being refreshed on category name change.

	deltaHF: 
		* Show comments for shared files

	Hetfield:
		* Some fix in new Tray system and desktopMode bypass

	Jacobo221:
		* Added option to select the max and min size-type in advanced
		  searches.
		* When "Extended Parameters" in Search tab is not selected, 
		  defaults are used.
		* Now "Auto-update serverlist at startup" checks if there's a 